# Task_manager-jira_killer

./: .env_EXAMPLE  .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: django.yml  main-ci.yml
task_manager/: settings.py  tests.py  urls.py  utils.py  views.py
task_manager/label/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/task/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_executor.py  0004_tasklabelrelation_task_labels.py
task_manager/task_status/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task_status/migrations/: 0001_initial.py  0002_taskstatusmodel_created_at.py  0003_alter_taskstatusmodel_name.py
task_manager/templates/: footer.html  index.html  main_layout.html  navigation.html
task_manager/templates/label/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/task/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  update.html
task_manager/users/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
task_manager/utils/: test_utils.py
