[tool.poetry]
name = "heclet-code"
version = "0.1.0"
description = ""
authors = ["OlegKhiretdinov <oleg@oleg.win>"]
readme = "README.md"
packages = [{include = "heclet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
